Revert "jambeth-ioc-test: AmbethIocRunner performance improvements"
This reverts commit 983d4280d71467446b2a065982b01b5e89ccd115.